@@ -1,3 +1,8 @@
+2004-09-29  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* ssl-wrappers.ads, ssl-wrappers.adb:
+	(SSL_do_handshake): New routine stub.
+
 2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* ssl-wrappers.ads, ssl-wrappers.adb:
